# Practice_Ceres

./: .gitignore  README.md
AnalyticDerivatives/: CMakeLists.txt  main.cpp
Basic/: CMakeLists.txt  main.cpp
HelloWorld/: CMakeLists.txt  main.cpp
NumbericDerivatives/: CMakeLists.txt  main.cpp
PowellsFunction/: CMakeLists.txt  main.cpp
RobustCurveFitting/: CMakeLists.txt  main.cpp
SimpleBA/: BAL.md  CMakeLists.txt  README.md  main.cpp
curveFitting/: CMakeLists.txt  main.cpp
doc/: OnDerivatives.md
generateData/: generateData.py
